force-app/main/default/objects/Job_Interview__c/Job_Interview__c.object-meta.xml
<CustomObject>
    <label>Job Interview</label>
    <nameField>
        <displayFormat>JI-{000000}</displayFormat>
        <label>Job Interview Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Interview</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>