force-app/main/default/objects/Job_Interview__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Interview</relationshipLabel>
    <relationshipName>Job_Interview</relationshipName>
    <type>Lookup</type>
</CustomField>