force-app/main/default/objects/Job_Interview__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Not Selected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>