force-app/main/default/objects/Job_Interview__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Interview_Date_Time__c</columns>
    <columns>Interviewer__c</columns>
    <columns>Job_Application__c</columns>
    <columns>Status__c</columns>
    <columns>Result__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>